# PrivacyOverlay

./: .clangd  .gitignore  CMakeLists.txt  CMakeUserPresets.json  build_error.txt  build_error_utf8.txt  build_log.txt  dummy_target.cpp  main.cpp  make_out.txt
core/: CaptureDetectionEngine.cpp  CaptureDetectionEngine.h  IconManager.cpp  IconManager.h  MaskEngine.cpp  MaskEngine.h
models/: AppRule.cpp  AppRule.h  AppState.h  CachedApp.h  Profile.cpp  Profile.h
persistence/: AppCacheManager.cpp  AppCacheManager.h  SettingsManager.cpp  SettingsManager.h
platform/: ActiveProcessMonitor.cpp  ActiveProcessMonitor.h  AppDiscoveryEngine.cpp  AppDiscoveryEngine.h  CaptureMonitor.cpp  CaptureMonitor.h  InjectionPayload.cpp  InjectionPayload.h  Injector.cpp  Injector.h  WinApiWrapper.cpp  WinApiWrapper.h  WindowEnumerator.cpp  WindowEnumerator.h
tmp_test/: Makefile.Debug  Makefile.Release  test.cpp  tmp_test.pro
ui/: AppListItem.cpp  AppListItem.h  DashboardWidget.cpp  DashboardWidget.h  MainWindow.cpp  MainWindow.h  NotificationCenterWidget.cpp  NotificationCenterWidget.h  PresetsWidget.cpp  PresetsWidget.h  SettingsWidget.cpp  SettingsWidget.h  ToastWidget.cpp  ToastWidget.h  TrayManager.cpp  TrayManager.h
